syntax.txt

program
    = {decl | ';' | NEWLINE}
decl
    = module
    | import
    | type_def
    | id_def
module
    = MODULE CID
import
    = IMPORT CID [AS CID]
type_def
    = TYPE type_decl
id_def
    = ID {params} '=' expr
    | ID ':' typexpr

type_decl
    = [type_params] ID ['=' type_representation]
type_params
    = TVAR
    | '(' TVAR {',' TVAR} ')'
type_representation
    = constr_decl {'|' constr_decl }
    | '{' field_decl ';' {field_decl ';'} '}'
    | typexpr
constr_decl
    = CID [typexpr {'*' typexpr}]
field_decl
    = [MUT] ID ':" typexpr
typexpr
    = typexpr_tuple ['->' typexpr]
typexpr_tuple
    = typexpr_ctor {'*' typexpr_ctor}
typexpr_ctor
    = ( '(' typexpr {',' typexpr} ')' | typexpr_primary ) [typeconstr]
typexpr_primary
    = INT | CHAR | UNIT | BOOL | STRING | TVAR | typeconstr
typeconstr
    = {CID '.'} ID

expr
    = let_expr
    | if_expr
    | fn_expr
    | comp_expr
    | cond_expr
    | ';'
    | NEWLINE
let_expr
    = LET id_def
if_expr
    = IF expr THEN expr [ELSE expr]
fn_expr
    | FN params '->' expr
params
    = {ID | '_' | '()'}
comp_expr
    = '{' {expr} '}'

cond_expr
    = bin_expr ['?' expr ':' expr]
bin_expr
    = apply_expr {bin_op bin_expr}
apply_expr
    = unary_expr {simple_expr}
unary_expr
    = [unary_op] simple_expr
simple_expr
    = id_Expr
    | BOOL_LIT | INT_LIT | CHAR_LIT | FLOAT_LIT | STRING_LIT 
    | list_expr | '[]' | '( expr {',' expr} ')'
list_expr
    = '[' [expr {',' expr}] ']'
id_expr
    = {CID '.'} ID

bin_op = '||' | '&&'
    | '==' | '!=' | '<' | '<=' | '>' | '>='
    | '+' | '-' | '*' | '/' | '%'
unary_op = '!' | '-' | '&' | '*'
